--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,13 +3,14 @@ pipeline {
      stages {
          stage('Build') {
              steps {
-                 sh 'echo "Hello World"'
-                 sh '''
-                     echo "Multiline shell steps works too"
-                     ls -lah
-                 '''
-             }
-         }      
+                 sh 'echo "Building"'
+         }   
+         stage('Input') {
+            steps {
+                input('Do you want to proceed?')
+            }
+        }
+         stage('If Proceed is clicked') {
          stage('Upload to AWS') {
               steps {
                   withAWS(region:'eu-west-1',credentials:'testcred') {
