--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,5 +19,14 @@ pipeline {
                   }
               }
          }
+                 stage('If abort is clicked') {
+            steps {
+                sh 'echo "Creating reverse branch"'
+                withCredentials([usernamePassword(credentialsId: 'ci-github', passwordVariable: 'X3peksni1234', usernameVariable: 'Slinkyss')]) {
+                        sh('git push https://${Slinkyss}:${X3peksni1234}@github.com/Slinkyss/jenkinstask.git')
+                    }
+
+            }
+
      }
 }
