--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,8 +31,10 @@ pipeline {
             sh '''
             git checkout -b faultycommit
             git revert -m 1 HEAD
-            git push 
             git branch -d faultycommit
+            git checkout main
+            git merge faultycommit
+            git push
 
             '''
 
