--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         }
          stage('Upload to AWS') {
               steps {
-                  withAWS(region:'eu-west-1',credentials:'testcred') {
+                  withAWS(region:'eu-west-1',credentials:'awsid') {
                   sh 'echo "Uploading content with AWS creds"'
                       s3Upload(pathStyleAccessEnabled: true, payloadSigningEnabled: true, file:'first-stack.yaml', bucket:'jenkinsslinkisbucket')
                   }
