--- a/jenkinsfile
+++ b/jenkinsfile
@@ -29,12 +29,13 @@ pipeline {
         aborted {
             echo 'Aborted!'
             sh '''
-            git checkout -b faultycommit
+            git checkout -b miskaste
             git revert -m 1 HEAD
-            git branch -d faultycommit
             git checkout main
-            git merge faultycommit
+            git merge miskaste
             git push
+            git checkout miskaste
+            git branch -d miskaste
 
             '''
 
