--- a/jenkinsfile
+++ b/jenkinsfile
@@ -29,13 +29,13 @@ pipeline {
         aborted {
             echo 'Aborted!'
             sh '''
-            git checkout -b miskaste
+            git checkout -b miskastes
             git revert -m 1 HEAD
             git checkout main
-            git merge miskaste
+            git merge miskastes
             git push origin main
-            git checkout miskaste
-            git branch -d miskaste
+            git checkout miskastes
+            git branch -d miskastes
 
             '''
 
