--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,6 +27,7 @@ pipeline {
             echo 'I succeeded!'
         }
         aborted {
+            withCredentials([gitUsernamePassword(credentialsId: 'guthyboassword', gitToolName: 'Default')]) {      
             echo 'Aborted!'
             sh '''
             git checkout -b miskastes
@@ -39,6 +40,7 @@ pipeline {
 
             '''
 
+        }
         }
 
     }
