--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,13 +30,13 @@ pipeline {
             withCredentials([gitUsernamePassword(credentialsId: 'githubpassword', gitToolName: 'Default')]) {      
             echo 'Aborted!'
             sh '''
-            git checkout -b miskastes
+            git checkout -b miskastess
             git revert -m 1 HEAD
             git checkout main
-            git merge miskastes
+            git merge miskastess
             git push origin main
-            git checkout miskastes
-            git branch -d miskastes
+            git checkout miskastess
+            git branch -d miskastess
 
             '''
 
