--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,13 +30,12 @@ pipeline {
             withCredentials([gitUsernamePassword(credentialsId: 'githubpassword', gitToolName: 'Default')]) {      
             echo 'Aborted!'
             sh '''
-            git checkout -b miskastess
-            git revert -m 1 HEAD
+            git checkout -b miskastesss
             git checkout main
             git merge miskastess
             git push main
-            git checkout miskastess
-            git branch -d miskastess
+            git checkout miskastesss
+            git branch -d miskastesss
 
             '''
 
