--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,12 +30,12 @@ pipeline {
             withCredentials([gitUsernamePassword(credentialsId: 'githubpassword', gitToolName: 'Default')]) {      
             echo 'Aborted!'
             sh '''
-            git checkout -b miskastesss
+            git checkout -b trashtest
             git checkout main
-            git merge miskastess
+            git merge trashtest
             git push main
-            git checkout miskastesss
-            git branch -d miskastesss
+            git checkout trashtest
+            git branch -d trashtest
 
             '''
 
