--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,13 +30,13 @@ pipeline {
             withCredentials([gitUsernamePassword(credentialsId: 'githubpassword', gitToolName: 'Default')]) {      
             echo 'Aborted!'
             sh '''
-            git checkout -b trashtest
+            git checkout -b trashtest1
             git checkout main
             git pull
-            git merge trashtest
+            git merge trashtest1
             git push main
-            git checkout trashtest
-            git branch -d trashtest
+            git checkout trashtest1
+            git branch -d trashtest1
 
             '''
 
